// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controller 'getActivityDatesTimes' should respond with correct activity dates and times of the repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "colorscale": Array [
            Array [
              0,
              "#f8fcff",
            ],
            Array [
              0.2,
              "#deedfc",
            ],
            Array [
              0.4,
              "#b2d1f7",
            ],
            Array [
              0.6,
              "#5889e0",
            ],
            Array [
              0.8,
              "#3b5998",
            ],
            Array [
              1,
              "#203451",
            ],
          ],
          "hoverinfo": "skip",
          "hoverongaps": false,
          "showscale": false,
          "type": "heatmap",
          "x": Array [
            "12 AM",
            "1 AM",
            "2 AM",
            "3 AM",
            "4 AM",
            "5 AM",
            "6 AM",
            "7 AM",
            "8 AM",
            "9 AM",
            "10 AM",
            "11 AM",
            "12 PM",
            "1 PM",
            "2 PM",
            "3 PM",
            "4 PM",
            "5 PM",
            "6 PM",
            "7 PM",
            "8 PM",
            "9 PM",
            "10 PM",
            "11 PM",
          ],
          "xgap": 2,
          "y": Array [
            "Sun",
            "Sat",
            "Fri",
            "Thurs",
            "Wed",
            "Tues",
            "Mon",
          ],
          "ygap": 2,
          "z": Array [
            Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            Array [
              0,
              0,
              0,
              2,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            Array [
              0,
              0,
              0,
              3,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          ],
          "zmax": 5,
          "zmin": 0,
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "colorscale": Array [
                    Array [
                      0,
                      "#f8fcff",
                    ],
                    Array [
                      0.2,
                      "#deedfc",
                    ],
                    Array [
                      0.4,
                      "#b2d1f7",
                    ],
                    Array [
                      0.6,
                      "#5889e0",
                    ],
                    Array [
                      0.8,
                      "#3b5998",
                    ],
                    Array [
                      1,
                      "#203451",
                    ],
                  ],
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "showscale": false,
                  "type": "heatmap",
                  "x": Array [
                    "12 AM",
                    "1 AM",
                    "2 AM",
                    "3 AM",
                    "4 AM",
                    "5 AM",
                    "6 AM",
                    "7 AM",
                    "8 AM",
                    "9 AM",
                    "10 AM",
                    "11 AM",
                    "12 PM",
                    "1 PM",
                    "2 PM",
                    "3 PM",
                    "4 PM",
                    "5 PM",
                    "6 PM",
                    "7 PM",
                    "8 PM",
                    "9 PM",
                    "10 PM",
                    "11 PM",
                  ],
                  "xgap": 2,
                  "y": Array [
                    "Sun",
                    "Sat",
                    "Fri",
                    "Thurs",
                    "Wed",
                    "Tues",
                    "Mon",
                  ],
                  "ygap": 2,
                  "z": Array [
                    Array [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ],
                    Array [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ],
                    Array [
                      0,
                      0,
                      0,
                      2,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ],
                    Array [
                      0,
                      0,
                      0,
                      3,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ],
                    Array [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ],
                    Array [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ],
                    Array [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ],
                  ],
                  "zmax": 5,
                  "zmin": 0,
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getCommitsMade' should respond with commits on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getContributors' should respond with contributors with their details. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "code": 2,
          "issues": 0,
          "name": "COMMITTER_NAME",
          "reviews": 0,
          "total": 2,
        },
        Object {
          "code": 0,
          "issues": 2,
          "name": "USER_NAME_TEST",
          "reviews": 0,
          "total": 2,
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "code": 2,
                  "issues": 0,
                  "name": "COMMITTER_NAME",
                  "reviews": 0,
                  "total": 2,
                },
                Object {
                  "code": 0,
                  "issues": 2,
                  "name": "USER_NAME_TEST",
                  "reviews": 0,
                  "total": 2,
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getIssuesActivity' should respond with the number of issues with activity on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    1,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getIssuesAge' should respond with issue ages on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "0-49",
            "50-99",
            "100-149",
            "150-199",
            "200-249",
            "250-299",
            "300-349",
            "350+",
          ],
          "y": Array [
            2,
            3,
            3,
            3,
            3,
            3,
            3,
            3,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "0-49",
                    "50-99",
                    "100-149",
                    "150-199",
                    "200-249",
                    "250-299",
                    "300-349",
                    "350+",
                  ],
                  "y": Array [
                    2,
                    3,
                    3,
                    3,
                    3,
                    3,
                    3,
                    3,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getIssuesAverageResponseTime' should respond with average response time for issues on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getIssuesAverageTimeSpent' should respond with the average time spent on issues, on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getIssuesClosed' should respond with the number of closed issues on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    1,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getIssuesOpened' should respond with the number of new opened issues on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getLinesTouched' should respond with line changes on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "name": "Additions",
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#ff7f0e",
          },
          "name": "Deletions",
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "name": "Additions",
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#ff7f0e",
                  },
                  "name": "Deletions",
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getRepoDetails' should respond with correct repository details when the repo is tracked. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "where": Object {
          "repoId": "REPO_ID_TEST",
          "userId": "USER_ID_TEST",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": true,
    },
  ],
}
`;

exports[`Controller 'getRepoDetails' should respond with correct repository details when the repo is tracked. 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "where": Object {
          "id": "REPO_ID_TEST",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "htmlUrl": "REPO_URL_TEST",
        "name": "REPO_NAME_TEST",
      },
    },
  ],
}
`;

exports[`Controller 'getRepoDetails' should respond with correct repository details when the repo is tracked. 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "REPO_NAME_TEST",
        "url": "REPO_URL_TEST",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "name": "REPO_NAME_TEST",
                "url": "REPO_URL_TEST",
              },
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getReviewsAccepted' should respond with the number of accepted PRs on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getReviewsAvgTime' should respond with the average time it took to accept PRs on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getReviewsRejected' should respond with the number of rejected PRs on the given repository. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;

exports[`Controller 'getTimeToFirstResponse' should respond with correct time it takes to first response issues / reviews. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "hoverinfo": "skip",
          "hoverongaps": false,
          "marker": Object {
            "color": "#3f51b5",
          },
          "showscale": false,
          "type": "bar",
          "x": Array [
            "Dec 18",
            "Dec 19",
            "Dec 20",
            "Dec 21",
            "Dec 22",
            "Dec 23",
            "Dec 24",
            "Dec 25",
            "Dec 26",
            "Dec 27",
            "Dec 28",
            "Dec 29",
            "Dec 30",
            "Dec 31",
          ],
          "y": Array [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "json": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                Object {
                  "hoverinfo": "skip",
                  "hoverongaps": false,
                  "marker": Object {
                    "color": "#3f51b5",
                  },
                  "showscale": false,
                  "type": "bar",
                  "x": Array [
                    "Dec 18",
                    "Dec 19",
                    "Dec 20",
                    "Dec 21",
                    "Dec 22",
                    "Dec 23",
                    "Dec 24",
                    "Dec 25",
                    "Dec 26",
                    "Dec 27",
                    "Dec 28",
                    "Dec 29",
                    "Dec 30",
                    "Dec 31",
                  ],
                  "y": Array [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ],
                },
              ],
            ],
          ],
          "results": [Circular],
        },
        "send": [MockFunction],
        "status": [MockFunction],
      },
    },
  ],
}
`;
